k8s/environments/review/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pal-tracker
spec:
  rules:
    - host: review.tracker.pal-tracker.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pal-tracker
                port:
                  number: 8080
  ingressClassName: nginx
